@@ -253,6 +253,40 @@ void JackWinNamedPipeClientChannel::SetTimebaseCallback(int refnum, int conditio
     ServerSyncCall(&req, &res, result);
 }
 
+void JackWinNamedPipeClientChannel::GetInternalClientName(int refnum, int int_ref, char* name_res, int* result)
+{
+    JackGetInternalClientNameRequest req(refnum, int_ref);
+    JackGetInternalClientNameResult res;
+    ServerSyncCall(&req, &res, result);
+	strcpy(name_res, res.fName);
+}
+
+void JackWinNamedPipeClientChannel::InternalClientHandle(int refnum, const char* client_name, int* status, int* int_ref, int* result)
+{
+    JackInternalClientHandleRequest req(refnum, client_name);
+    JackInternalClientHandleResult res;
+    ServerSyncCall(&req, &res, result);
+	*int_ref = res.fIntRefNum;
+	*status = res.fStatus;
+}
+
+void JackWinNamedPipeClientChannel::InternalClientLoad(int refnum, const char* client_name, const char* so_name, const char* objet_data, int options, int* status, int* int_ref, int* result)
+{
+    JackInternalClientLoadRequest req(refnum, client_name, so_name, objet_data, options);
+    JackInternalClientLoadResult res;
+    ServerSyncCall(&req, &res, result);
+	*int_ref = res.fIntRefNum;
+	*status = res.fStatus;
+}
+
+void JackWinNamedPipeClientChannel::InternalClientUnload(int refnum, int int_ref, int* status, int* result)
+{
+    JackInternalClientUnloadRequest req(refnum, int_ref);
+    JackInternalClientUnloadResult res;
+    ServerSyncCall(&req, &res, result);
+	*status = res.fStatus;
+}
+
 bool JackWinNamedPipeClientChannel::Init()
 {
     JackLog("JackWinNamedPipeClientChannel::Init \n");
