@@ -258,6 +258,46 @@ int JackClientPipeThread::HandleRequest()
 			res.Write(fPipe);
 			break;
 		}
+
+		case JackRequest::kGetInternalClientName: {
+			JackLog("JackRequest::kGetInternalClientName\n");
+			JackGetInternalClientNameRequest req;
+			JackGetInternalClientNameResult res;
+			if (req.Read(fPipe) == 0)
+				res.fResult = fServer->GetEngine()->GetInternalClientName(req.fIntRefNum, res.fName);
+			res.Write(fPipe);
+			break;
+		}
+			
+		case JackRequest::kInternalClientHandle: {
+			JackLog("JackRequest::kInternalClientHandle\n");
+			JackInternalClientHandleRequest req;
+			JackInternalClientHandleResult res;
+			if (req.Read(fPipe) == 0)
+				res.fResult = fServer->GetEngine()->InternalClientHandle(req.fName, &res.fStatus, &res.fIntRefNum);
+			res.Write(fPipe);
+			break;
+		}
+			
+		case JackRequest::kInternalClientLoad: {
+			JackLog("JackRequest::kInternalClientLoad\n");
+			JackInternalClientLoadRequest req;
+			JackInternalClientLoadResult res;
+			if (req.Read(fPipe) == 0)
+				res.fResult = fServer->InternalClientLoad(req.fName, req.fDllName, req.fLoadInitName, req.fOptions, &res.fIntRefNum, &res.fStatus);
+			res.Write(fPipe);
+			break;
+		}
+			
+		case JackRequest::kInternalClientUnload: {
+			JackLog("JackRequest::kInternalClientUnload\n");
+			JackInternalClientUnloadRequest req;
+			JackInternalClientUnloadResult res;
+			if (req.Read(fPipe) == 0)
+				res.fResult = fServer->GetEngine()->InternalClientUnload(req.fIntRefNum, &res.fStatus);
+			res.Write(fPipe);
+			break;
+		}
 			
 		case JackRequest::kNotification: {
 			JackLog("JackRequest::Notification\n");
